# marginalia

./: .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  README.md  SECURITY.md  pyproject.toml
src/marginalia/: __main__.py  audio.py  brief.py  cli.py  console.py  cost.py  discovery.py  logging.py  models.py  pipeline.py  sources.py  state.py  transcribe.py  youtube.py
src/marginalia/swift/: transcribe.swift
tests/: test_audio.py  test_brief.py  test_console.py  test_cost.py  test_discovery.py  test_logging.py  test_pipeline.py  test_security.py  test_sources.py  test_state.py  test_transcribe.py  test_youtube.py
